fix(markdown): text and image overflow in markdown (#112)
* fix(markdown): text overflow in markdown

* fix(markdown): remove header tags style

* fix(markdown): image overflow in markdown

--- a/src/app/markdown/markdown.component.less
+++ b/src/app/markdown/markdown.component.less
@@ -8,6 +8,9 @@
 .editor-container {
   width: 100%;
   background-color: @color-pf-black-200;
+  img {
+    max-width: 100%;
+  }
   .editor {
     background-color: @color-pf-white;
     padding-right: 30px;
@@ -15,6 +18,7 @@
     border: 1px solid @color-pf-black-400;
     box-shadow: inset 0 1px 1px rgba(0, 0, 0, .075);
     transition: border-color ease-in-out .15s, box-shadow ease-in-out .15s;
+    word-wrap: break-word;
     .editor-markdown {
       font-size: 1.071em;
       margin: 0;
